# internal/handler/book.go
@@ -8,6 +8,36 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetBooks      godoc
+// @Summary      Books list
+// @Description  Get books list
+// @Tags         books
+// @Accept       json
+// @Produce      json
+// @Success      200  {array} entities.Book
+// @Failure      500  {object} string "Server error"
+// @Router       /books [get]
+func (h *Handler) GetBooks(c *gin.Context) {
+	books, err := h.service.GetBooks()
+	if err != nil {
+		c.IndentedJSON(http.StatusInternalServerError, gin.H{"message": "Server error " + err.Error()})
+		return
+	}
+
+	c.IndentedJSON(http.StatusOK, books)
+}
+
+// GetBook       godoc
+// @Summary      Book view
+// @Description  Get book info
+// @Tags         books
+// @Accept       json
+// @Produce      json
+// @Success      200  {object} entities.Book
+// @Failure      400  {object} string "ID is not provided"
+// @Failure      404  {object} string "Book not found"
+// @Failure      500  {object} string "Server error"
+// @Router       /book/{id} [get]
 func (h *Handler) GetBook(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Param("id"))
 	if id == 0 {
@@ -29,16 +59,19 @@ func (h *Handler) GetBook(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, book)
 }
 
-func (h *Handler) GetBooks(c *gin.Context) {
-	books, err := h.service.GetBooks()
-	if err != nil {
-		c.IndentedJSON(http.StatusInternalServerError, gin.H{"message": "Server error " + err.Error()})
-		return
-	}
-
-	c.IndentedJSON(http.StatusOK, books)
-}
-
+// CreateBook    godoc
+// @Summary      Book create
+// @Description  Create new book
+// @Tags         books
+// @Accept       json
+// @Produce      json
+// @Security     Bearer
+// @Param        request body entities.Book true "query params"
+// @Success      200  {object} string "Book created"
+// @Failure      400  {object} string "Validation error"
+// @Failure      404  {object} string "Book not found"
+// @Failure      500  {object} string "Server error"
+// @Router       /book [post]
 func (h *Handler) CreateBook(c *gin.Context) {
 	var book entities.Book
 
